# weiqi-online-python

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.py  hf_space.json  pyproject.toml  requirements.txt
backend/: TECHNICAL.md  game_engine.py  hf_space.py  main.py  room_manager.py  types.py
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  types.ts
client/src/components/: Board.css  Board.tsx  Chat.css  Chat.tsx  Timer.css  Timer.tsx
client/src/game/: engine.ts
client/src/pages/: Game.css  Game.tsx  Home.css  Home.tsx  Review.css  Review.tsx  WaitingRoom.css  WaitingRoom.tsx
client/src/services/: socket.ts
